static/css/dhiraj.css
/* ... */
.add_to_cart_continue:hover {
    border: 4px solid #E3AA00;
    background: var(--Core-yellow, #FFC760);
    color: var(--Core-Main-Blue, #030527);
    padding: 16px 30px;
    width: 100%;



}


/* Home Page */

.home_sec_2_section {
    background: url('../media/hero_sec_2.png') no-repeat center;
    background-size: cover;
    padding: 62px 0 120px;
    color: #fff;
    background-color: #FFE6BC !important;
    height: 1310px;
}

/* Top spacing */
.home_sec_2_top_content {
    margin-bottom: 384px;
    /* pushes content above castle line */
}

/* Title */
.home_sec_2_title {
    color: var(--Base-White, #FFF);
    text-align: center;
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: #000;
    font-family: "LEMON MILK";
    font-size: 36px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    letter-spacing: 1.44px;
    font-weight: 700;
    margin-bottom: 16px;
}

.home_sec_2_subtitle {
    margin-bottom: 56px;
    color: var(--Core-yellow, #FFC760);
    text-align: center;

    /* P/Standard */
    font-family: "Sen";
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 180%;
    /* 28.8px */
}

/* Steps */
.home_sec_2_steps {
    display: flex;
    align-items: center;
    align-content: center;
    gap: 40px;
    align-self: stretch;
    flex-wrap: nowrap;
    width: 100%;
    margin-bottom: 56px;
}

.home_sec_2_step {
    width: 100%;
}

.home_sec_2_step h4 {
    color: var(--Base-White, #FFF);
    text-align: center;
    font-family: "LEMON MILK";
    font-size: 28px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
    letter-spacing: 1.12px;
    margin-bottom: 16px;
}

.home_sec_2_step p {
    color: var(--Base-Off-White, #FAFAFA);
    text-align: center;
    font-family: "Sen";
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 180%;
    /* 28.8px */
    margin-bottom: 0px;
}

/* Arrow */
.home_sec_2_arrow img {
    width: 72px;
}

/* Button */
.home_sec_2_btn {
    width: 328px;
    height: 56px;
    border: none;
    background: url('../media/hom_2_sec_btn1.png') no-repeat center;
    background-size: cover;
    color: #4A311A;
    font-family: "LEMON MILK";
    font-size: 14px;
    font-style: normal;
    font-weight: 700;
    line-height: 150%;
    /* 21px */
    letter-spacing: 0.84px;
    margin-bottom: 0px;
}

/* Bottom Section */
.home_sec_2_bottom_content {
    color: #000;
}

/* Bottom Title */
.home_sec_2_bottom_title {
    color: var(--Core-Main-Blue, #030527);
    text-align: center;

    /* Headings/02 */
    font-family: "LEMON MILK";
    font-size: 36px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    letter-spacing: 1.44px;
    margin-bottom: 16px;
}

.home_sec_2_bottom_subtitle {
    color: var(--Base-01, #383838);
    text-align: center;
    font-family: "Sen";
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 180%;
    /* 28.8px */
    margin-bottom: 92px;
    max-width: 824px;
    margin-left: auto;
    margin-right: auto;
}

/* Cards */
.home_sec_2_cards {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    align-content: flex-start;
    flex-wrap: wrap;
}


.home_sec_2_card {
    display: flex;
    padding: 40px 24px 24px 24px;
    flex-direction: column;
    align-items: flex-start;
    gap: 8px;
    align-self: stretch;
    text-align: center;
    background: var(--Base-Off-White, #FAFAFA);
    position: relative;
    max-width: 350px;
}

.home_sec_2_card_icon {
    width: 90px !important;
    position: absolute;
    top: -60px;
    margin: auto;
    left: 0;
    right: 0;
}

.home_sec_2_card h5 {
    color: var(--Core-Main-Blue, #030527);
    text-align: center;

    /* Headings/04 */
    font-family: "LEMON MILK";
    font-size: 24px;
    font-style: normal;
    font-weight: 500;
    line-height: 120%;
    /* 28.8px */
    letter-spacing: 0.96px;
    margin-bottom: 0px;
}

.home_sec_2_card p {
    color: var(--Base-01, #383838);
    text-align: center;
    font-family: "Sen";
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 180%;
    /* 28.8px */
    margin-bottom: 0px;
}



.home_sec_3_section {
    background: url('../media/home_mod_3.png') no-repeat center;
    background-size: 100% 100%;
    padding: 32px 0 120px;
    color: #fff;
    background-color: #FFE6BC;
    height: 765px;
}

/* Layout */
.home_sec_3_wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 60px;
}



/* Content */
.home_sec_3_content {
    max-width: 566px;
}



/* Title */
.home_sec_3_title {
    color: var(--Core-Main-Blue, #030527);

    /* Headings/02 */
    font-family: "LEMON MILK";
    font-size: 36px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    letter-spacing: 1.44px;
    margin-bottom: 16px;
}

/* Text */
.home_sec_3_text {
    color: var(--Base-01, #383838);
    font-family: "Sen";
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 180%;
    /* 28.8px */
    margin-bottom: 24px;
}

/* Button (IMAGE BG) */
.home_sec_3_btn {
    width: 344px;
    height: 56px;
    border: none;
    background: url('../media/hom_2_sec_btn1.png') no-repeat center;
    background-size: cover;
    color: #4A311A;
    font-family: "LEMON MILK";
    font-size: 14px;
    font-style: normal;
    font-weight: 700;
    line-height: 150%;
    /* 21px */
    letter-spacing: 0.84px;
    margin-bottom: 0px;
    cursor: pointer;
}

.home_sec_3_btn:focus {
    outline: none;
    box-shadow: none;
}


/* SECTION */

.home_sec_4_content {
    max-width: 566px;
    margin-top: 142px;
    margin-left: 160px;
}
/* ... */

